@@ -1,3 +1,15 @@
+2012-03-09  Jeff Miller  <jeffm@apple.com>
+
+        Add WKPageEndPrinting() to balance WKPageBeginPrinting()
+        https://bugs.webkit.org/show_bug.cgi?id=80739
+
+        Reviewed by Dan Bernstein.
+
+        * UIProcess/API/C/WKPage.cpp:
+        (WKPageEndPrinting): Added.
+        
+        * UIProcess/API/C/WKPagePrivate.h: Added WKPageEndPrinting().
+
 2012-03-09  Emil A Eklund  <eae@chromium.org>
 
         Add roundedPoint to HitTestResult and change platform code to use it
